--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <input type="password" id="password" placeholder="Contraseña">
     <button id="loginBtn">Ingresar</button>
     <button id="logoutBtn">Salir</button>
+    <div id="loginMsg"></div>
+
   </div>
 
   <meta charset="utf-8">
@@ -1523,7 +1525,6 @@ Swal.fire({
     <img src="images/peluqueria/pl12.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
-
 <div id="modal-hebillas-colitas" class="modal modal-producto" style="display:none;">  <div class="modal-contenido">
     <h2>Set Hebillas Colitas<h2>
     <p>Seleccioná tu tipo:</p>
@@ -1532,16 +1533,13 @@ Swal.fire({
       <option value="kuromi negro">Kuromi negro</option>
       <option value="kuromi violeta">Kuromi violeta.</option>
     </select>
-
     <div class="botones-modal">
       <button onclick="confirmarAgregar('hebillas-colitas', 'hebillas colitas', 2500)">Confirmar y agregar</button>
       <button onclick="cerrarModal('hebillas-colitas')">Cancelar</button>
     </div>
-
     <img src="images/peluqueria/pl9.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
-
 <div id="modal-esmaltes" class="modal modal-producto" style="display:none;">  <div class="modal-contenido">
     <h2>Esmaltes<h2>
     <p>Seleccioná tu color:</p>
@@ -1553,14 +1551,11 @@ Swal.fire({
       <option value="rosado con glitter">Rosado con glitter.</option>
       <option value="perlado">Perlado.</option>
       <option value="marfil">Marfil.</option>
-
     </select>
-
     <div class="botones-modal">
       <button onclick="confirmarAgregar('esmaltes', 'esmaltes', 2000)">Confirmar y agregar</button>
       <button onclick="cerrarModal('esmaltes')">Cancelar</button>
     </div>
-
     <img src="images/maquillaje/mq50.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
@@ -1572,14 +1567,11 @@ Swal.fire({
       <option value="110">110</option>
       <option value="120">120.</option>
       <option value="130">130.</option>
-
     </select>
-
     <div class="botones-modal">
       <button onclick="confirmarAgregar('base', 'base', 2000)">Confirmar y agregar</button>
       <button onclick="cerrarModal('base')">Cancelar</button>
     </div>
-
     <img src="images/maquillaje/mq51.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
@@ -1592,10 +1584,7 @@ Swal.fire({
       <option value="rojo">Rojo.</option>
       <option value="fucsia">Fucsia.</option>
       <option value="marron">Marron.</option>
-
-
     </select>
-
     <div class="botones-modal">
       <button onclick="confirmarAgregar('labial-a', 'labial ', 1200)">Confirmar y agregar</button>
       <button onclick="cerrarModal('labial-a')">Cancelar</button>
@@ -1614,30 +1603,18 @@ Swal.fire({
       <option value="rojo">Rojo.</option>
        <option value="marron">Marron.</option>
       <option value="Marron glitter">Marron glitter</option>
-
-
     </select>
-
     <div class="botones-modal">
       <button onclick="confirmarAgregar('labial-b', 'labial ', 1000)">Confirmar y agregar</button>
       <button onclick="cerrarModal('labial-b')">Cancelar</button>
     </div>
-
     <img src="images/maquillaje/mq60.jpg" alt="delineador-de-labios" class="imagen-grande">
   </div>
 </div>
-
-
-
-
-
-
     <div class="modal-imagen">
       <img src="images/peluqueria/pl1.jpeg" alt="Cepillo Anti-Frizz" class="imagen-grande">
     </div>
-
   </div>
-
 </div>
   <script type="module" src="firebase.js"></script>
 </body>
