--- a/clientes.html
+++ b/clientes.html
@@ -5,14 +5,15 @@
   <title>Registro de Clientes</title>
 </head>
 <body>
-  <h2>Registrar Cliente</h2>
-  <form id="clienteForm">
-    <input type="text" id="nombre" placeholder="Nombre" required>
-    <input type="date" id="fecha" required>
-    <button type="submit">Guardar</button>
-        <button onclick="location.href='menu.html'">Volver al Menú Principal</button>
-
-  </form>
+<h2>Registrar Cliente</h2>
+<form id="clienteForm">
+  <input type="text" id="nombre" placeholder="Nombre" required>
+  <input type="tel" id="telefono" placeholder="Teléfono" required>
+    <input type="text" id="etiqueta" placeholder="#Etiqueta" required>
+  <input type="date" id="fecha" required>
+  <button type="submit">Guardar</button>
+  <button type="button" onclick="location.href='menu.html'">Volver al Menú Principal</button>
+</form>
 
   <div style="display:flex; gap:40px; margin-top:20px;">
     <div>
