--- a/clientes.html
+++ b/clientes.html
@@ -9,7 +9,7 @@
 <form id="clienteForm">
   <input type="text" id="nombre" placeholder="Nombre" required>
   <input type="tel" id="telefono" placeholder="Teléfono" required>
-    <input type="text" id="etiqueta" placeholder="#Etiqueta" required>
+    <input type="text" id="etiqueta" placeholder="#Etiqueta">
   <input type="date" id="fecha" required>
   <button type="submit">Guardar</button>
   <button type="button" onclick="location.href='menu.html'">Volver al Menú Principal</button>
