--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
 </div>
       <div class="producto">
         <img src="images//skincare/sk15.jpg" alt="Skincare producto" onclick="abrirImagenProducto(this)" data-descripcion="">
-        <h4>Depilador de cejas.</h4>
+        <h4>Perfilador de cejas.</h4>
         <p>$1100</p>
-<button onclick="agregarAlCarrito('Depilador de cejas', 1100)" class="btn">Agregar al carrito</button>  
+<button onclick="agregarAlCarrito('Perfialdor de cejas', 1100)" class="btn">Agregar al carrito</button>  
 
 </div>
 
