--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,6 @@
       transform: scale(1.05);
     }
 
-    /* Estilo especial para el botón de volver */
     .boton-volver {
       width: 280px;
       height: 80px;
@@ -30,7 +29,7 @@
       font-weight: bold;
       cursor: pointer;
       border-radius: 12px;
-      background-color: #777; /* gris elegante */
+      background-color: #777;
       color: white;
       border: none;
       box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
@@ -51,13 +50,15 @@
     <button onclick="location.href='stock.html'" class="boton-grande">
       Control de Stock
     </button>
-    <!-- 🔹 Nuevo botón Balance -->
     <button onclick="location.href='balance.html'" class="boton-grande">
       Balance
     </button>
+    <!-- 🔹 Nuevo botón Proveedores -->
+    <button onclick="location.href='proveedores.html'" class="boton-grande">
+      Registro de Proveedores
+    </button>
   </div>
 
-  <!-- Botón de volver -->
   <div style="margin-top:40px;">
     <button onclick="location.href='https://www.glowzza.com.ar'" class="boton-volver">
       Volver a Glowzza
