--- a/menu.html
+++ b/menu.html
@@ -53,9 +53,12 @@
     <button onclick="location.href='balance.html'" class="boton-grande">
       Balance
     </button>
-    <!-- 🔹 Nuevo botón Proveedores -->
     <button onclick="location.href='proveedores.html'" class="boton-grande">
       Registro de Proveedores
+    </button>
+    <!-- 🔹 Nuevo botón Descargas -->
+    <button onclick="location.href='descargas.html'" class="boton-grande">
+      Descargas
     </button>
   </div>
 
