--- a/stock.html
+++ b/stock.html
@@ -136,7 +136,7 @@
   }
 </style>
   <meta charset="UTF-8">
-  <title>Control de Stock</title>
+  <title>Control de Stock General</title>
 </head>
 <body>
   <h2>Secciones</h2>
