--- a/descargas.html
+++ b/descargas.html
@@ -4,6 +4,21 @@
   <meta charset="UTF-8">
   <title>Glowzza - Descargas</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #f0f0f0, #d9fdd3);
+      text-align: center;
+      margin: 0;
+      padding: 40px;
+    }
+
+    h1 {
+      color: #333;
+      margin-bottom: 30px;
+      font-size: 32px;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+    }
+
     .boton-descarga {
       width: 280px;
       height: 80px;
@@ -22,6 +37,25 @@
       background-color: #1976D2;
       transform: scale(1.05);
     }
+
+    .boton-volver {
+      width: 280px;
+      height: 60px;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 12px;
+      background-color: #777;
+      color: white;
+      border: none;
+      margin-top: 30px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      transition: transform 0.2s, background-color 0.2s;
+    }
+    .boton-volver:hover {
+      background-color: #555;
+      transform: scale(1.05);
+    }
   </style>
 </head>
 <body>
@@ -31,8 +65,10 @@
   <button onclick="descargarVentas()" class="boton-descarga">Descargar Ventas Cerradas</button>
   <button onclick="descargarBalance()" class="boton-descarga">Descargar Balance</button>
   <button onclick="descargarStock()" class="boton-descarga">Descargar Stock</button>
-  <!-- 🔹 Nuevo botón Full Download -->
   <button onclick="descargarTodo()" class="boton-descarga">Full Download</button>
+
+  <!-- 🔹 Botón para volver al menú principal -->
+  <button onclick="location.href='index.html'" class="boton-volver">Volver al Menú Principal</button>
 
   <script type="module">
     import { getFirestore, getDocs, collection } 
@@ -92,7 +128,6 @@
       descargarTXT("stock.txt", texto);
     }
 
-    // 🔹 Full Download en un solo TXT con fecha/hora en nombre y contenido
     async function descargarTodo() {
       const ahora = new Date();
       const fechaHora = ahora.toISOString().replace(/[:.]/g, "-");
@@ -100,7 +135,6 @@
 
       let texto = `=== FULL DOWNLOAD ===\nGenerado el: ${ahora.toLocaleString()}\n\n`;
 
-      // Clientes
       const clientesSnap = await getDocs(collection(db, "clientes"));
       texto += "=== CLIENTES ===\n";
       clientesSnap.forEach(doc => {
@@ -109,7 +143,6 @@
       });
       texto += "\n";
 
-      // Ventas Cerradas
       const ventasSnap = await getDocs(collection(db, "ventasCerradas"));
       texto += "=== VENTAS CERRADAS ===\n";
       ventasSnap.forEach(doc => {
@@ -118,14 +151,12 @@
       });
       texto += "\n";
 
-      // Balance
       let totalIngresos = 0;
       ventasSnap.forEach(doc => {
         totalIngresos += doc.data().total || 0;
       });
       texto += `=== BALANCE ===\nTotal Ingresos: $${totalIngresos}\n\n`;
 
-      // Stock
       const stockSnap = await getDocs(collection(db, "productos"));
       texto += "=== STOCK ===\n";
       stockSnap.forEach(doc => {
