--- a/descargas.html
+++ b/descargas.html
@@ -68,7 +68,7 @@
   <button onclick="descargarTodo()" class="boton-descarga">Full Download</button>
 
   <!-- 🔹 Botón para volver al menú principal -->
-  <button onclick="location.href='index.html'" class="boton-volver">Volver al Menú Principal</button>
+  <button onclick="location.href='menu.html'" class="boton-volver">Volver al Menú Principal</button>
 
   <script type="module">
     import { getFirestore, getDocs, collection } 
